--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/uksivt?useTimezone=true&serverTimezone=GMT
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect = =org.hibernate.dialect.MySQL5Dialect
+spring.datasource.url=jdbc:h2:mem:uksivt
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
